@@ -1,0 +1,24 @@
+<h1>Editing tipos_apartamento</h1>
+
+<% form_for(@tipos_apartamento) do |f| %>
+  <%= f.error_messages %>
+
+  <p>
+    <%= f.label :nome %><br />
+    <%= f.text_field :nome %>
+  </p>
+  <p>
+    <%= f.label :descricao %><br />
+    <%= f.text_area :descricao %>
+  </p>
+  <p>
+    <%= f.label :valor %><br />
+    <%= f.text_field :valor %>
+  </p>
+  <p>
+    <%= f.submit "Update" %>
+  </p>
+<% end %>
+
+<%= link_to 'Show', @tipos_apartamento %> |
+<%= link_to 'Back', tipos_apartamentos_path %>
